--- a/backend/NoInvolution.MassageShop.Web/NoInvolution.MassageShop.Web.csproj
+++ b/backend/NoInvolution.MassageShop.Web/NoInvolution.MassageShop.Web.csproj
@@ -8,10 +8,21 @@
 
   <ItemGroup>
     <PackageReference Include="MiCake.AspNetCore.Start" Version="0.6.0-CI-20210813-024648" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NoInvolution.MassageShop.EntityFramework\NoInvolution.MassageShop.EntityFramework.csproj" />
+    <ProjectReference Include="..\NoInvolution.MassageShop.Integration\NoInvolution.MassageShop.Integration.csproj" />
   </ItemGroup>
 
 </Project>
