--- a/backend/NoInvolution.MassageShop.Web/appsettings.json
+++ b/backend/NoInvolution.MassageShop.Web/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "Postgre": "Host=localhost;Port=54320;Database=dream_db;Username=postgres;Password=a12345"
+  },
+  "CORSUrl": [ "http://localhost:8080", "http://localhost:8083" ],
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
