--- a/backend/NoInvolution.MassageShop.Web/appsettings.json
+++ b/backend/NoInvolution.MassageShop.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Postgre": "Host=localhost;Port=54320;Database=dream_db;Username=postgres;Password=a12345"
+    "Postgre": "Host=localhost;Port=54320;Database=massage_db;Username=postgres;Password=a12345"
   },
   "CORSUrl": [ "http://localhost:8080", "http://localhost:8083" ],
   "Serilog": {
