--- a/backend/NoInvolution.MassageShop.Domain/NoInvolution.MassageShop.Domain.csproj
+++ b/backend/NoInvolution.MassageShop.Domain/NoInvolution.MassageShop.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,8 +18,6 @@
   <ItemGroup>
     <Folder Include="Common\ValueObj\" />
     <Folder Include="PersonnelContext\Entities\" />
-    <Folder Include="PersonnelContext\Repositories\" />
-    <Folder Include="ReserveContext\Repositories\" />
   </ItemGroup>
 
 </Project>
